# GraphRAG-Engine-Knowledge-Graph-Agentic-Retrieval-with-Neo4j-LangGraph

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: eval_cases.json
dashboard/: Home.py  data_access.py  shared.py  ui.py
dashboard/pages/: 1_Chat.py  2_Ops.py  3_Corpus_Explorer.py  4_Project_Guide.py  5_Path_Explorer.py
docs/: architecture.md  operations_runbook.md  pathcache_rag_spec.md  project_overview.md  release_checklist.md  reproduce_results.md  user_guide.md
scripts/: bootstrap_windows.ps1
src/graphrag_engine/: __init__.py  runtime.py
src/graphrag_engine/agent/: workflow.py
src/graphrag_engine/api/: app.py
src/graphrag_engine/cli/: main.py
src/graphrag_engine/common/: __init__.py  artifacts.py  compat.py  hashing.py  logging.py  models.py  providers.py  settings.py
src/graphrag_engine/evaluation/: dataset.py  metrics.py  service.py
src/graphrag_engine/extraction/: __init__.py  service.py
src/graphrag_engine/generation/: service.py
src/graphrag_engine/graph/: __init__.py  community.py  loader.py
src/graphrag_engine/ingestion/: __init__.py  chunking.py  parser.py  service.py
src/graphrag_engine/retrieval/: fusion.py  path_cache.py  service.py
tests/: test_api.py  test_chunking.py  test_evaluation_dataset.py  test_extraction.py  test_fusion.py  test_parser.py  test_providers.py  test_retrieval.py  test_workflow.py
